fixing input field on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,9 @@ input[type="text"],
 input[type="tel"] {
   display: block;
   border: none;
+  outline: none;
   border-bottom: 1px solid rgba( 0, 0, 0, .4);
+  border-radius: 0;
   width: 100%;
   margin-bottom: 20px;
 }
